Fixed vertical spacing for the section

--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 7rem;
+  margin: 15rem 0;
 }
 
 .home {
